Fix sidenote alignment in lists.
The 5% difference is due to the difference in the width of the p
elements and the ul/ol elements: 55% and 50%, respectively.

See also edwardtufte/tufte-css#170.

--- a/parts/notebook.css
+++ b/parts/notebook.css
@@ -234,6 +234,11 @@ img {
     position: relative;
 }
 
+li .sidenote,
+li .marginnote {
+    margin-right: -65%;
+}
+
 .sidenote-number {
     counter-increment: sidenote-counter;
 }
